feat(parallel-computing): introduce fifth lab of parallel computing
Signed-off-by: Vadym Yaroshchuk <contact@y9vad9.com>